# palminput

./: .gitignore  .gitmodules  README.md
data/skin/skin-black/: english-qwerty-ios.json  english-qwerty.json  pinyin-qwerty-ios.json  pinyin-qwerty.json  symbol-number.json  symbol-qwerty-cn-more.json  symbol-qwerty-cn.json  symbol-qwerty-en-more.json  symbol-qwerty-en.json
data/skin/skin-white/: english-qwerty-ios.json  handwrite.json  number.json  pinyin-qwerty.json  symbol-qwerty-cn-more.json  symbol-qwerty-cn.json  symbol-qwerty-en-more.json  symbol-qwerty-en.json
engine/: CMakeLists.txt
engine/data/phrase/: py_beijing.txt  py_name.txt  py_sys.lex  py_sys.txt  py_sys.txt.inf
engine/data/text/: fuzzy.txt  group.txt  han.txt  key.txt  pinyin.txt  pinyin_group.txt  yunmu.txt
engine/data/tools/pinyin_maker/: make_pinyin_data.py  make_pinyin_hash.py  make_sys_lex.py
engine/include/: PYTypeDef.h
engine/project/android/PalmEngine/: settings.gradle.kts
engine/project/android/PalmEngine/app/: build.gradle.kts
engine/project/android/PalmEngine/app/src/androidTest/java/com/palminput/engine/: ExampleInstrumentedTest.java
engine/project/android/PalmEngine/app/src/main/: AndroidManifest.xml
engine/project/android/PalmEngine/app/src/main/cpp/: CMakeLists.txt  CMakeLists1.txt  PYAdapter.c  PYAdapter.h  PYProvider.cpp  native-lib.cpp
engine/project/android/PalmEngine/app/src/main/java/com/palminput/engine/: MainActivity.java  PYProvider.java  PinyinAdapter.java
engine/project/android/PalmEngine/app/src/main/res/layout/: activity_main.xml  item.xml
engine/project/android/PalmEngine/app/src/main/res/values/: strings.xml  themes.xml
engine/project/android/PalmEngine/app/src/main/res/values-night/: themes.xml
engine/project/android/PalmEngine/app/src/test/java/com/palminput/engine/: ExampleUnitTest.java
engine/project/android/PalmEngine/gradle/wrapper/: gradle-wrapper.properties
engine/project/ios/KBDemo/: NoUse.m
engine/project/ios/KBDemo/KBDemo/: AppDelegate.swift  SceneDelegate.swift  UIInputViewController.swift  ViewController.swift  handwrite.json
engine/project/ios/KBDemo/KBDemo.xcodeproj/: project.pbxproj
engine/project/ios/KBDemo/KBDemo.xcodeproj/project.xcworkspace/xcuserdata/liutingchao.xcuserdatad/: UserInterfaceState.xcuserstate
engine/project/ios/KBDemo/KBDemo.xcodeproj/xcuserdata/liutingchao.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
engine/project/ios/KBDemo/KBDemo.xcodeproj/xcuserdata/liutingchao.xcuserdatad/xcschemes/: xcschememanagement.plist
engine/project/ios/KBDemo/KBDemo/Keyboard/: HandView.swift  InputBaseView.swift  InputMgrView.swift  InputResPool.swift  KeyboardSkin.swift  PinyinView.swift
engine/project/ios/palmengine/palmengine/: palmengine.h  palmengine.m
engine/project/ios/palmengine/palmengine.xcodeproj/: project.pbxproj
engine/project/ios/palmengine/palmengine.xcodeproj/project.xcworkspace/xcuserdata/liutingchao.xcuserdatad/: UserInterfaceState.xcuserstate
engine/project/ios/palmengine/palmengine.xcodeproj/xcshareddata/xcschemes/: palmengine.xcscheme
engine/project/ios/palmengine/palmengine.xcodeproj/xcuserdata/liutingchao.xcuserdatad/xcschemes/: xcschememanagement.plist
engine/project/mac/palmengine/palmengine/: palmengine.h  palmengine.m
engine/project/mac/palmengine/palmengine.xcodeproj/: project.pbxproj
engine/project/mac/palmengine/palmengine.xcodeproj/project.xcworkspace/xcuserdata/liutingchao.xcuserdatad/: UserInterfaceState.xcuserstate
engine/project/mac/palmengine/palmengine.xcodeproj/xcshareddata/xcschemes/: palmengine.xcscheme
engine/project/mac/palmengine/palmengine.xcodeproj/xcuserdata/liutingchao.xcuserdatad/xcschemes/: xcschememanagement.plist
engine/src/pinyin/: PDLexBeijing.h  PDLexCore.h  PDLexName.c  PDLexName.h  PYCand.c  PYCand.h  PYConst.h  PYDyn.c  PYDyn.h  PYDynEx.c  PYDynEx.h  PYEngine.c  PYEngine.h  PYEngineEx.c  PYEngineEx.h  PYFix.c  PYFix.h  PYGraph.c  PYGraph.h  PYHan.c  PYHan.h  PYHanData.c  PYHanData.h  PYHanDef.h  PYKey.c  PYKey.h  PYLex.c  PYLex.h  PYLexEx.cpp  PYLexEx.h  PYName.c  PYName.h  PYPredict.c  PYPredict.h  PYPriDef.h  PYUtils.c  PYUtils.h
engine/src/platform/apple/: palmengine.h  palmengine.m
engine/test/: main.c  pytest.h  pytest_dyn.c  pytest_engine.c  pytest_graph.c  pytest_han.c  pytest_lexread.c  pytest_lexwrite.c
project/android/PalmInput/: readme.txt  settings.gradle.kts
project/android/PalmInput/app/: build.gradle.kts
project/ios/PalmInput/PalmInput/: ContentView.swift  PalmInputApp.swift
project/ios/PalmInput/PalmInput.xcodeproj/: project.pbxproj
project/ios/PalmInput/PalmKeyboard/: HandView.swift  InputBaseView.swift  InputMgrView.swift  KeyboardViewController.swift  PalmKeyboard-Bridging-Header.h  PinyinView.swift  num_keyboard.json
project/ios/doc/: custom keyboard.docx
project/linux/doc/: fcitx-dev-ubuntu-16.04.txt  fcitx-dev-ubuntu-20.04.txt  ibus-dev-ubuntu-20.04.txt
project/linux/fcitx-palminput/: do.sh  env.sh
project/linux/fcitx-palminput/po/: POTFILES.in.in  fcitx-palminput.pot  zh_TW.po
project/linux/fcitx-palminput/src/: CMakeLists.txt  eim.h
project/linux/ibus-palminput/: CMakeLists.txt  enchant.xml  engine.c  main.c
project/linux/palminput/: AUTHORS  INSTALL  README  TODO  config.h.in  repeat.sh
project/linux/palminput-fcitx/: CMakeLists.txt  install.sh
project/linux/palminput-fcitx/po/: CMakeLists.txt
project/linux/palminput-fcitx/src/: CMakeLists.txt
project/linux/palminput/data/: CMakeLists.txt  fcitx-palminput.conf.in  palminput.conf.in
project/linux/palminput/po/: zh_CN.po
project/linux/palminput/src/: eim.cpp
project/mac/: .gitignore
project/windows/: .gitignore
project/windows/Installer/: PalmInputSetup.bat  README.txt  build.bat  installer.nsi
project/windows/PalmInput/: DllEntry.cpp  PalmCandidateWindow.cpp  PalmCandidateWindow.h  PalmInput.cpp  PalmInput.def  PalmInput.h  PalmInput.rc  PalmInput.sln  PalmInput.vcxproj  PalmInput.vcxproj.filters  PalmInputConfig.cpp  PalmInputConfig.h  PalmInputModule.cpp  PalmInputModule.h  reg.bat  resource.h  unreg.bat
(+131 files in other folders)
